--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
     buildToolsVersion "30.0.3"
 
     defaultConfig {
-        applicationId "com.example.snacklish"
+        applicationId "com.drkinkykinkles.snacklish"
         minSdkVersion 28
         targetSdkVersion 30
         versionCode 1
